Updated styling, fixed scroll issue on mobile, fix #65 for rentals

--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,14 @@ body {
   -webkit-font-smoothing: antialiased;
   line-height: 1.5 !important;
   background-color: rgb(1, 1, 1) !important;
-  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+}
+
+#root {
+  -webkit-overflow-scrolling: touch;
+  height:100%;
+  overflow-x: hidden;
 }
 
 .overlay {
@@ -2131,12 +2137,12 @@ body {
 
 .col-mobile-profile-nav .dropdown-menu.show {
   transform: translate3d(-25px, 47px, 0px) !important;
-  left: -10px;
+  left: -10px !important;
 }
 
 .nav-item-loggedout .dropdown-menu.show {
   transform: translate3d(-60px, 47px, 0px) !important;
-  left: -10px
+  left: -10px !important;
 }
 
 .div-hamburger {
@@ -3534,8 +3540,8 @@ body {
 .col-mobile-profile-pic-p {
   padding-right: 0 !important;
   padding-left: 0 !important;
-  width: 135px !important;
-  height: 135px; 
+  width: 150px !important;
+  height: 150px; 
   justify-content: center;
   align-items: center;
   display: flex;
